typhon-cluster/apps/termix/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: termix
spec:
  parentRefs:
    - name: main
      namespace: gateway
  hostnames:
    - termix.buildwithcaleb.com
  rules:
    - backendRefs:
        - name: termix
          port: 8080
